# maine_state_legislator_data

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  data.json  district_data.csv  house_municipality_data.csv  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml  python.yml  scorecards.yml  update-data.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_legislature_urls_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_scraper_py.html
src/: legislature_urls.py  main.py  scraper.py
tests/: test_extract_legislator_from_string.py  test_state_house_municipality_scraper.py
tests/page_examples/: house.html
