[project]
name = "maine_state_legislator_data"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/maine_state_legislator_data" }
dependencies = [
    "beautifulsoup4==4.13.4",
    "ratelimit==2.2.1",
    "requests==2.32.3",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml,sarif]==1.8.3",
    "mypy==1.16.0",
    "pre-commit==4.2.0",
    "pytest-cov==6.1.1",
    "pytest-xdist==3.7.0",
    "pytest==8.3.5",
    "ruff==0.11.12",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-requests==2.32.0.20250328",
    "types-tqdm==4.67.0.20250516"
]
github-actions = [
    "coverage==7.8.2",
    "pytest-cov==6.1.1",
]

[tool.ruff]
line-length = 160
target-version = "py310"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "ratelimit",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src -n auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
relative_files = true
command_line = "-m pytest"

[tool.coverage.paths]
source = [
    "src/",
]
omit = [
    "tests",
]

[tool.coverage.report]
exclude_also = [
    "logger.",
]

[tool.bandit]
exclude_dirs = [
    "./tests/",
    "./.venv/",
]
