[project]
name = "maine_state_legislator_data"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Ramona T", "email" = "ramona.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/maine_state_legislator_data" }
dependencies = [
    "beautifulsoup4==4.14.2",
    "ratelimit==2.2.1",
    "requests==2.32.5",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "bandit[sarif]==1.8.6",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pytest==8.4.2",
    "ruff==0.14.1",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-requests==2.32.4.20250913",
    "types-tqdm==4.67.0.20250809"
]

[tool.ruff]
line-length = 160
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear (B)
    "E", # pycodestyle errors (E)
    "W", # pycodestyle warnings (W)
    "C4", # flake8-comprehensions (C4)
    "F", # Pyflakes (F)
    "UP", # pyupgrade (UP)
    "I", # isort (I)
    "TID", # flake8-tidy-imports (TID)
    "ICN", # flake8-import-conventions (ICN)
    "Q", # flake8-quotes (Q)
    "TC", # flake8-type-checking (TC)
    "YTT", # flake8-2020 (YTT)
    "SIM", # flake8-simplify (SIM)
    "PTH", # flake8-use-pathlib (PTH)
    "ISC", # flake8-implicit-str-concat (ISC)
    "PT", # flake8-pytest-style (PT)
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.pytest.ini_options]
addopts = "--cov=src --no-cov-on-fail -n auto"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = [
    "tests/",
]

[tool.coverage.run]
branch = true
relative_files = true
command_line = "-m pytest"

[tool.coverage.paths]
source = [
    "src/",
]
omit = [
    "tests/",
]

[tool.coverage.report]
exclude_also = [
    "logger.",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "ratelimit",
]
ignore_missing_imports = true
